# mcp

./: client.py  pyproject.toml
basic-mcp/: .gitignore  pyproject.toml  weather.py
mcp-functionality/: .gitignore  crypto.py  local.py  log.txt  notes.txt  pyproject.toml  screenshot.py  websearch.py
